# haskell-mime

./: APIs.hs  Base64.hs  MIME.cabal  MIME.hs  Makefile  QuotedPrintable.hs  RFC2045.hs  RFC2045Test.hs  RFC2046.hs  RFC2822.hs  TestMIME.hs  mime.lhs  notes.txt
Extra/: Email.hs
MIME/: Base64.hs  MIME.hs  QuotedPrintable.hs  RFC2045.hs  RFC2046.hs  RFC2822.hs
Text/MIME/: Compose.hs  Type.hs
Text/MIME/Codec/: Base64.hs  QuotedPrintable.hs
Text/MIME/Parse/: DateTime.hs  MIME.hs  RFC2045.hs  RFC2046.hs
debian/: changelog  control  copyright  rules
debian.old/: changelog  copyright  rules
examples/: Base64Test.hs  Main.hs  TestMIME.hs
